# flowstep

./: .coveragerc  Makefile  README.md  TODO.csv  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflows/: test-coverage.yaml  upload-test.yml
flowstep/: __init__.py  defaults.py  flow.py  logging_.py  utils.py
flowstep/examples/: examples.py  file_processing.py  list_iteration.py  list_next.py  utils.py
lab/: TODO.csv  TODO.json  improved_TODO.json  notes.py
tests/: conftest.py  test_flow.py  test_flowstep.py  test_utils.py
